// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`full article with style 1`] = `
.c11 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c13 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font-size: 14px;
  font-family: sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 498px;
  padding: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  z-index: 100;
  border-top: 3px solid #005c8a;
  box-shadow: 0px 16px 24px 0px rgba(17,17,17,0.08);
  background: white;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.c6 {
  font-size: 14px;
}

.c4 {
  font-weight: 700;
  font-size: 18px;
  color: #333;
  font-family: Roboto-Regular;
}

.c7 {
  font-weight: 400;
  line-height: 24px;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  background: transparent;
  border: 0;
  cursor: pointer;
}

.c31 {
  color: #333333;
  display: block;
  font-family: TimesDigitalW04-Regular,TimesDigitalW04-Regular-fallback,serif;
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c31:first-of-type:after {
  content: "";
  clear: both;
  display: table;
}

.c34 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-left: 10px;
}

.c30 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c37 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c38 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c33 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-left: 10px;
  padding-right: 10px;
  margin-bottom: 10px;
}

.c32 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: block;
}

.c35 {
  clear: both;
  min-height: 283px;
  margin: 30px 0;
  box-sizing: content-box;
  padding: 0 0 10px;
  border-bottom: 1px solid rgb(219,219,219);
}

.c36 {
  border-bottom: 1px solid rgb(219,219,219);
  color: #696969;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular,TimesDigitalW04-Regular-fallback,serif;
  -webkit-letter-spacing: 0.6px;
  -moz-letter-spacing: 0.6px;
  -ms-letter-spacing: 0.6px;
  letter-spacing: 0.6px;
  margin: 0 0 10px;
  padding: 0 0 5px;
  text-align: center;
  text-transform: uppercase;
}

.c19 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c19 + .c18 {
  margin-top: -1px !important;
}

.c19:last-child {
  margin-bottom: 30px;
}

.c10 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 0;
}

.c10 > .c18 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c27 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c28 {
  position: relative;
}

.c0 {
  position: fixed;
  top: 20px;
  width: 100%;
  text-align: -webkit-center;
  z-index: 10;
}

.c26 {
  background-color: #FFFFFF;
  height: 60px;
}

.c26 [data-tc-sticky-sizer] {
  border-bottom: 1px solid transparent;
  will-change: border-bottom-color;
}

.c26.tc-sticky {
  will-change: height,box-shadow;
}

.c26[MOCK-PROGRESS-SELECTOR] {
  height: 59.5px;
  box-shadow: 0 2px 5px 0 #c9c7c7ed;
}

.c26[MOCK-PROGRESS-SELECTOR].tc-sticky [data-tc-sticky-sizer] {
  border-bottom-color: #ffffffdb;
}

.c25 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c25 + .c24 {
  margin-top: -1px !important;
}

.c25:last-child {
  margin-bottom: 30px;
}

.c25.contains-tc-sticky {
  border-bottom-color: transparent;
}

.c23 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font-size: 14px;
  font-family: sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  font-family: Roboto-Regular,Roboto-Regular-fallback,sans-serif;
  font-size: 14px;
  line-height: 17px;
  color: #696969;
  margin-top: 5px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 5px;
}

.c15 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-top: 5px;
  padding-bottom: 15px;
}

.c12 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-bottom: 45px;
  padding-left: 20px;
  padding-right: 20px;
  padding-top: 60px;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c14 {
  border: 0px solid black;
  box-sizing: border-box;
  display: inline;
  font-family: sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  font-weight: 400;
  font-size: 30px;
  line-height: 33px;
  font-weight: 400;
  color: rgba(255,255,255,1);
  margin-bottom: 10px;
  text-align: center;
}

.c21 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  max-width: 100%;
}

.c20 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c22 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: none;
}

.c16 {
  border: 0px solid black;
  box-sizing: border-box;
  display: inline;
  font-family: sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  font-weight: 400;
  font-family: TimesModern-Regular,TimesModern-Regular-fallback,serif;
  font-size: 20px;
  line-height: 26px;
  font-weight: 400;
  color: rgba(255,255,255,1);
  margin-bottom: 15px;
  padding-left: 10px;
  padding-right: 10px;
  text-align: center;
}

.c17 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c8 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  box-sizing: content-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c31 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c31 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c34 {
    padding-left: 0px;
  }
}

@media (min-width:768px) {
  .c30 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c30 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c37 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c37 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c38 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c38 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c33 {
    width: 50%;
    float: left;
    margin-right: 20px;
    margin-bottom: 0px;
    margin-top: 5px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:768px) {
  .c32 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c32 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c35 {
    min-height: 123px;
  }
}

@media (min-width:970px) {
  .c35 {
    min-height: 283px;
  }
}

@media (min-width:768px) {
  .c19 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c19 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c19 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c9 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c29 {
    margin-top: 0;
    -webkit-transition: margin-top 0.2s ease;
    transition: margin-top 0.2s ease;
  }
}

@media (min-width:768px) {
  .c25 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c25 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c25 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c23 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c15 {
    padding-top: 0;
  }
}

@media (min-width:768px) {
  .c12 {
    width: 80.8%;
    margin-top: 0;
    margin-left: auto !important;
    margin-right: auto !important;
  }
}

@media (min-width:1024px) {
  .c12 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c14 {
    font-size: 45px;
    line-height: 50px;
    margin-bottom: 5px;
  }
}

@media (min-width:768px) {
  .c21 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c20 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:768px) {
  .c22 {
    background-color: #DBDBDB;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    height: 15px;
    margin: 0 10px;
    width: 1px;
  }
}

@media (min-width:768px) {
  .c16 {
    font-size: 22px;
    line-height: 30px;
    margin-bottom: 25px;
  }
}

@media (min-width:1024px) {
  .c16 {
    margin-bottom: 20px;
  }
}

@media (min-width:1024px) {
  .c17 {
    width: 100%;
    margin-left: auto;
    margin-right: auto;
  }
}

@media (min-width:768px) {
  .c8 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c8 {
    min-height: 250px;
  }
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <svg>
            <path />
          </svg>
          <div
            className="c4"
          >
            Check your inbox
          </div>
        </div>
        <button
          className="c5"
        >
          <svg>
            <path />
          </svg>
        </button>
      </div>
      <div
        className="c6"
      >
        <div
          className="c7"
        >
          Verify your email by clicking on the link sent to your inbox.
        </div>
      </div>
    </div>
  </div>
  <div />
  <article>
    <Helmet>
      <title>
        Some Headline
      </title>
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <script>
        {"@context":"https://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://url.io"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=1200","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z","author":{"@type":"Person","name":"Some byline"},"articleSection":"Some Section","keywords":"Section:Some Section","articleId":"198c4b2f-ecec-4f34-be53-c89f83bc1b44","url":"https://url.io"}
      </script>
    </Helmet>
    <div
      className="c8"
    >
      <AdContainer
        marginBottom={0}
      />
    </div>
    <main
      className="c9"
    >
      <div
        className="c10"
      >
        <div
          backgroundColor="rgba(60, 129, 190, 1)"
          className="c11"
          order={2}
          width="100%"
        >
          <div
            className="c12"
          >
            <div
              className="c11"
              marginBottom="10px"
            >
              <div
                className="c13"
                color="rgba(255, 255, 255, 1)"
                fontFamily="Roboto-Regular, Roboto-Regular-fallback, sans-serif"
                fontSize={12}
                fontWeight="400"
                letterSpacing={0.5}
                lineHeight="12px"
                marginBottom={0}
                marginTop={-1}
                paddingTop={1}
              >
                SOME LABEL
              </div>
            </div>
            <h1
              className="c14"
            >
              Some Headline
            </h1>
            <div
              className="c15"
            >
              <ArticleFlags />
            </div>
            <h2
              className="c16"
            >
              Some Standfirst
            </h2>
          </div>
        </div>
        <ArticleLeadAsset
          className="c17"
          marginBottom="20px"
        />
        <div
          className="c18 c19"
        >
          <div
            className="c20"
            justifyContent="center"
            paddingBottom="10px"
            paddingTop="10px"
          >
            <div
              className="c21"
              flexDirection="row"
              flexWrap="wrap"
              justifyContent="center"
            >
              <ArticleBylineWithLinks />
            </div>
            <div
              className="c22"
            />
            <div
              className="c21"
              flexDirection="row"
              flexWrap="wrap"
              justifyContent="center"
            >
              <div
                className="c23"
              >
                <DatePublication />
              </div>
            </div>
          </div>
        </div>
        <div
          className="c18 c24 c25"
        >
          <div
            display="none"
          />
          <div>
            <div
              className="c26"
            >
              <div>
                <SaveAndShareBar />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        className="c27"
      >
        <div
          className="c28"
        >
          <div
            className="c29"
          >
            <div>
              <div>
                <div
                  className="c30"
                >
                  <ArticleImage />
                </div>
              </div>
            </div>
            <Link>
              Some Link
            </Link>
            <p
              className="c31"
            >
              Some content
            </p>
            <div
              className="c32"
            >
              <div
                className="c33"
              >
                <PullQuote>
                  The pull quote content
                </PullQuote>
              </div>
            </div>
            <div
              className="c30"
            >
              <figure
                margin={0}
              >
                <div
                  className="c11"
                  paddingBottom="56.25%"
                  position="relative"
                >
                  <div
                    className="c11"
                    height="100%"
                    position="absolute"
                    width="100%"
                  >
                    <div
                      className="lcpItem"
                      height="100%"
                      width="100%"
                    >
                      <div
                        height="100%"
                        position="relative"
                        width="100%"
                      >
                        <video
                          className="video-js"
                          height="100%"
                          width="100%"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <figcaption>
                  <div
                    className="c34"
                  >
                    <div
                      className="c11"
                    >
                      <div
                        className="c11"
                        paddingTop="10px"
                      >
                        <div
                          className="c13"
                          color="#696969"
                          fontFamily="Roboto-Regular, Roboto-Regular-fallback, sans-serif"
                          fontSize={14}
                          lineHeight="19px"
                          marginBottom={4}
                        >
                          This is video caption
                        </div>
                      </div>
                    </div>
                  </div>
                </figcaption>
              </figure>
            </div>
            <div
              className="c35"
            >
              <h2
                className="c36"
              >
                Advertisement
              </h2>
              <AdContainer />
            </div>
            <div>
              <div>
                <div
                  className="c37"
                >
                  <ArticleImage />
                </div>
              </div>
            </div>
            <div>
              <div>
                <div
                  className="c38"
                >
                  <ArticleImage />
                </div>
              </div>
            </div>
            <div />
          </div>
        </div>
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;

exports[`full article with style in the culture magazine 1`] = `
.c11 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c13 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font-size: 14px;
  font-family: sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 498px;
  padding: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  z-index: 100;
  border-top: 3px solid #005c8a;
  box-shadow: 0px 16px 24px 0px rgba(17,17,17,0.08);
  background: white;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.c6 {
  font-size: 14px;
}

.c4 {
  font-weight: 700;
  font-size: 18px;
  color: #333;
  font-family: Roboto-Regular;
}

.c7 {
  font-weight: 400;
  line-height: 24px;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  background: transparent;
  border: 0;
  cursor: pointer;
}

.c31 {
  color: #333333;
  display: block;
  font-family: TimesDigitalW04-Regular,TimesDigitalW04-Regular-fallback,serif;
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c31:first-of-type:after {
  content: "";
  clear: both;
  display: table;
}

.c34 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-left: 10px;
}

.c30 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c37 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c38 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c33 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-left: 10px;
  padding-right: 10px;
  margin-bottom: 10px;
}

.c32 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: block;
}

.c35 {
  clear: both;
  min-height: 283px;
  margin: 30px 0;
  box-sizing: content-box;
  padding: 0 0 10px;
  border-bottom: 1px solid rgb(219,219,219);
}

.c36 {
  border-bottom: 1px solid rgb(219,219,219);
  color: #696969;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular,TimesDigitalW04-Regular-fallback,serif;
  -webkit-letter-spacing: 0.6px;
  -moz-letter-spacing: 0.6px;
  -ms-letter-spacing: 0.6px;
  letter-spacing: 0.6px;
  margin: 0 0 10px;
  padding: 0 0 5px;
  text-align: center;
  text-transform: uppercase;
}

.c19 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c19 + .c18 {
  margin-top: -1px !important;
}

.c19:last-child {
  margin-bottom: 30px;
}

.c10 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 0;
}

.c10 > .c18 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c27 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c28 {
  position: relative;
}

.c0 {
  position: fixed;
  top: 20px;
  width: 100%;
  text-align: -webkit-center;
  z-index: 10;
}

.c26 {
  background-color: #FFFFFF;
  height: 60px;
}

.c26 [data-tc-sticky-sizer] {
  border-bottom: 1px solid transparent;
  will-change: border-bottom-color;
}

.c26.tc-sticky {
  will-change: height,box-shadow;
}

.c26[MOCK-PROGRESS-SELECTOR] {
  height: 59.5px;
  box-shadow: 0 2px 5px 0 #c9c7c7ed;
}

.c26[MOCK-PROGRESS-SELECTOR].tc-sticky [data-tc-sticky-sizer] {
  border-bottom-color: #ffffffdb;
}

.c25 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c25 + .c24 {
  margin-top: -1px !important;
}

.c25:last-child {
  margin-bottom: 30px;
}

.c25.contains-tc-sticky {
  border-bottom-color: transparent;
}

.c23 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font-size: 14px;
  font-family: sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  font-family: Roboto-Regular,Roboto-Regular-fallback,sans-serif;
  font-size: 14px;
  line-height: 17px;
  color: #696969;
  margin-top: 5px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 5px;
}

.c15 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-top: 5px;
  padding-bottom: 15px;
}

.c12 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-bottom: 45px;
  padding-left: 20px;
  padding-right: 20px;
  padding-top: 60px;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c14 {
  border: 0px solid black;
  box-sizing: border-box;
  display: inline;
  font-family: sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  font-weight: 400;
  font-family: TimesModern-Bold,TimesModern-Bold-fallback,serif;
  font-size: 30px;
  line-height: 33px;
  font-weight: 400;
  color: rgba(255,255,255,1);
  margin-bottom: 10px;
  text-align: center;
}

.c21 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  max-width: 100%;
}

.c20 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c22 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: none;
}

.c16 {
  border: 0px solid black;
  box-sizing: border-box;
  display: inline;
  font-family: sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  font-weight: 400;
  font-family: TimesModern-Regular,TimesModern-Regular-fallback,serif;
  font-size: 20px;
  line-height: 26px;
  font-weight: 400;
  color: rgba(255,255,255,1);
  margin-bottom: 15px;
  padding-left: 10px;
  padding-right: 10px;
  text-align: center;
}

.c17 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c8 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  box-sizing: content-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c31 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c31 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c34 {
    padding-left: 0px;
  }
}

@media (min-width:768px) {
  .c30 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c30 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c37 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c37 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c38 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c38 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c33 {
    width: 50%;
    float: left;
    margin-right: 20px;
    margin-bottom: 0px;
    margin-top: 5px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:768px) {
  .c32 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c32 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c35 {
    min-height: 123px;
  }
}

@media (min-width:970px) {
  .c35 {
    min-height: 283px;
  }
}

@media (min-width:768px) {
  .c19 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c19 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c19 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c9 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c29 {
    margin-top: 0;
    -webkit-transition: margin-top 0.2s ease;
    transition: margin-top 0.2s ease;
  }
}

@media (min-width:768px) {
  .c25 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c25 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c25 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c23 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c15 {
    padding-top: 0;
  }
}

@media (min-width:768px) {
  .c12 {
    width: 80.8%;
    margin-top: 0;
    margin-left: auto !important;
    margin-right: auto !important;
  }
}

@media (min-width:1024px) {
  .c12 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c14 {
    font-size: 45px;
    line-height: 50px;
    margin-bottom: 5px;
  }
}

@media (min-width:768px) {
  .c21 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c20 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:768px) {
  .c22 {
    background-color: #DBDBDB;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    height: 15px;
    margin: 0 10px;
    width: 1px;
  }
}

@media (min-width:768px) {
  .c16 {
    font-size: 22px;
    line-height: 30px;
    margin-bottom: 25px;
  }
}

@media (min-width:1024px) {
  .c16 {
    margin-bottom: 20px;
  }
}

@media (min-width:1024px) {
  .c17 {
    width: 100%;
    margin-left: auto;
    margin-right: auto;
  }
}

@media (min-width:768px) {
  .c8 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c8 {
    min-height: 250px;
  }
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <svg>
            <path />
          </svg>
          <div
            className="c4"
          >
            Check your inbox
          </div>
        </div>
        <button
          className="c5"
        >
          <svg>
            <path />
          </svg>
        </button>
      </div>
      <div
        className="c6"
      >
        <div
          className="c7"
        >
          Verify your email by clicking on the link sent to your inbox.
        </div>
      </div>
    </div>
  </div>
  <div />
  <article>
    <Helmet>
      <title>
        Some Headline
      </title>
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <script>
        {"@context":"https://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://url.io"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=1200","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z","author":{"@type":"Person","name":"Some byline"},"articleSection":"Some Section","keywords":"Section:Some Section","articleId":"198c4b2f-ecec-4f34-be53-c89f83bc1b44","url":"https://url.io"}
      </script>
    </Helmet>
    <div
      className="c8"
    >
      <AdContainer
        marginBottom={0}
      />
    </div>
    <main
      className="c9"
    >
      <div
        className="c10"
      >
        <div
          backgroundColor="rgba(60, 129, 190, 1)"
          className="c11"
          order={2}
          width="100%"
        >
          <div
            className="c12"
          >
            <div
              className="c11"
              marginBottom="10px"
            >
              <div
                className="c13"
                color="rgba(255, 255, 255, 1)"
                fontFamily="Roboto-Regular, Roboto-Regular-fallback, sans-serif"
                fontSize={12}
                fontWeight="400"
                letterSpacing={0.5}
                lineHeight="12px"
                marginBottom={0}
                marginTop={-1}
                paddingTop={1}
              >
                SOME LABEL
              </div>
            </div>
            <h1
              className="c14"
            >
              Some Headline
            </h1>
            <div
              className="c15"
            >
              <ArticleFlags />
            </div>
            <h2
              className="c16"
            >
              Some Standfirst
            </h2>
          </div>
        </div>
        <ArticleLeadAsset
          className="c17"
          marginBottom="20px"
        />
        <div
          className="c18 c19"
        >
          <div
            className="c20"
            justifyContent="center"
            paddingBottom="10px"
            paddingTop="10px"
          >
            <div
              className="c21"
              flexDirection="row"
              flexWrap="wrap"
              justifyContent="center"
            >
              <ArticleBylineWithLinks />
            </div>
            <div
              className="c22"
            />
            <div
              className="c21"
              flexDirection="row"
              flexWrap="wrap"
              justifyContent="center"
            >
              <div
                className="c23"
              >
                <DatePublication />
              </div>
            </div>
          </div>
        </div>
        <div
          className="c18 c24 c25"
        >
          <div
            display="none"
          />
          <div>
            <div
              className="c26"
            >
              <div>
                <SaveAndShareBar />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        className="c27"
      >
        <div
          className="c28"
        >
          <div
            className="c29"
          >
            <div>
              <div>
                <div
                  className="c30"
                >
                  <ArticleImage />
                </div>
              </div>
            </div>
            <Link>
              Some Link
            </Link>
            <p
              className="c31"
            >
              Some content
            </p>
            <div
              className="c32"
            >
              <div
                className="c33"
              >
                <PullQuote>
                  The pull quote content
                </PullQuote>
              </div>
            </div>
            <div
              className="c30"
            >
              <figure
                margin={0}
              >
                <div
                  className="c11"
                  paddingBottom="56.25%"
                  position="relative"
                >
                  <div
                    className="c11"
                    height="100%"
                    position="absolute"
                    width="100%"
                  >
                    <div
                      className="lcpItem"
                      height="100%"
                      width="100%"
                    >
                      <div
                        height="100%"
                        position="relative"
                        width="100%"
                      >
                        <video
                          className="video-js"
                          height="100%"
                          width="100%"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <figcaption>
                  <div
                    className="c34"
                  >
                    <div
                      className="c11"
                    >
                      <div
                        className="c11"
                        paddingTop="10px"
                      >
                        <div
                          className="c13"
                          color="#696969"
                          fontFamily="Roboto-Regular, Roboto-Regular-fallback, sans-serif"
                          fontSize={14}
                          lineHeight="19px"
                          marginBottom={4}
                        >
                          This is video caption
                        </div>
                      </div>
                    </div>
                  </div>
                </figcaption>
              </figure>
            </div>
            <div
              className="c35"
            >
              <h2
                className="c36"
              >
                Advertisement
              </h2>
              <AdContainer />
            </div>
            <div>
              <div>
                <div
                  className="c37"
                >
                  <ArticleImage />
                </div>
              </div>
            </div>
            <div>
              <div>
                <div
                  className="c38"
                >
                  <ArticleImage />
                </div>
              </div>
            </div>
            <div />
          </div>
        </div>
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;

exports[`full article with style in the style magazine 1`] = `
.c11 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c13 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font-size: 14px;
  font-family: sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 498px;
  padding: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  z-index: 100;
  border-top: 3px solid #005c8a;
  box-shadow: 0px 16px 24px 0px rgba(17,17,17,0.08);
  background: white;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.c6 {
  font-size: 14px;
}

.c4 {
  font-weight: 700;
  font-size: 18px;
  color: #333;
  font-family: Roboto-Regular;
}

.c7 {
  font-weight: 400;
  line-height: 24px;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  background: transparent;
  border: 0;
  cursor: pointer;
}

.c31 {
  color: #333333;
  display: block;
  font-family: TimesDigitalW04-Regular,TimesDigitalW04-Regular-fallback,serif;
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c31:first-of-type:after {
  content: "";
  clear: both;
  display: table;
}

.c34 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-left: 10px;
}

.c30 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c37 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c38 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c33 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-left: 10px;
  padding-right: 10px;
  margin-bottom: 10px;
}

.c32 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: block;
}

.c35 {
  clear: both;
  min-height: 283px;
  margin: 30px 0;
  box-sizing: content-box;
  padding: 0 0 10px;
  border-bottom: 1px solid rgb(219,219,219);
}

.c36 {
  border-bottom: 1px solid rgb(219,219,219);
  color: #696969;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular,TimesDigitalW04-Regular-fallback,serif;
  -webkit-letter-spacing: 0.6px;
  -moz-letter-spacing: 0.6px;
  -ms-letter-spacing: 0.6px;
  letter-spacing: 0.6px;
  margin: 0 0 10px;
  padding: 0 0 5px;
  text-align: center;
  text-transform: uppercase;
}

.c19 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c19 + .c18 {
  margin-top: -1px !important;
}

.c19:last-child {
  margin-bottom: 30px;
}

.c10 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 0;
}

.c10 > .c18 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c27 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c28 {
  position: relative;
}

.c0 {
  position: fixed;
  top: 20px;
  width: 100%;
  text-align: -webkit-center;
  z-index: 10;
}

.c26 {
  background-color: #FFFFFF;
  height: 60px;
}

.c26 [data-tc-sticky-sizer] {
  border-bottom: 1px solid transparent;
  will-change: border-bottom-color;
}

.c26.tc-sticky {
  will-change: height,box-shadow;
}

.c26[MOCK-PROGRESS-SELECTOR] {
  height: 59.5px;
  box-shadow: 0 2px 5px 0 #c9c7c7ed;
}

.c26[MOCK-PROGRESS-SELECTOR].tc-sticky [data-tc-sticky-sizer] {
  border-bottom-color: #ffffffdb;
}

.c25 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c25 + .c24 {
  margin-top: -1px !important;
}

.c25:last-child {
  margin-bottom: 30px;
}

.c25.contains-tc-sticky {
  border-bottom-color: transparent;
}

.c23 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font-size: 14px;
  font-family: sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  font-family: Roboto-Regular,Roboto-Regular-fallback,sans-serif;
  font-size: 14px;
  line-height: 17px;
  color: #696969;
  margin-top: 5px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 5px;
}

.c15 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-top: 5px;
  padding-bottom: 15px;
}

.c12 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-bottom: 45px;
  padding-left: 20px;
  padding-right: 20px;
  padding-top: 60px;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c14 {
  border: 0px solid black;
  box-sizing: border-box;
  display: inline;
  font-family: sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  font-weight: 400;
  font-family: TimesModern-Bold,TimesModern-Bold-fallback,serif;
  font-size: 30px;
  line-height: 33px;
  font-weight: 400;
  color: rgba(255,255,255,1);
  margin-bottom: 10px;
  text-align: center;
  text-transform: none;
}

.c21 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  max-width: 100%;
}

.c20 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c22 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: none;
}

.c16 {
  border: 0px solid black;
  box-sizing: border-box;
  display: inline;
  font-family: sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  font-weight: 400;
  font-family: TimesModern-Regular,TimesModern-Regular-fallback,serif;
  font-size: 20px;
  line-height: 26px;
  font-weight: 400;
  color: rgba(255,255,255,1);
  margin-bottom: 15px;
  padding-left: 10px;
  padding-right: 10px;
  text-align: center;
}

.c17 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c8 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  box-sizing: content-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c31 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c31 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c34 {
    padding-left: 0px;
  }
}

@media (min-width:768px) {
  .c30 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c30 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c37 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c37 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c38 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c38 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c33 {
    width: 50%;
    float: left;
    margin-right: 20px;
    margin-bottom: 0px;
    margin-top: 5px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:768px) {
  .c32 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c32 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c35 {
    min-height: 123px;
  }
}

@media (min-width:970px) {
  .c35 {
    min-height: 283px;
  }
}

@media (min-width:768px) {
  .c19 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c19 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c19 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c9 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c29 {
    margin-top: 0;
    -webkit-transition: margin-top 0.2s ease;
    transition: margin-top 0.2s ease;
  }
}

@media (min-width:768px) {
  .c25 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c25 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c25 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c23 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c15 {
    padding-top: 0;
  }
}

@media (min-width:768px) {
  .c12 {
    width: 80.8%;
    margin-top: 0;
    margin-left: auto !important;
    margin-right: auto !important;
  }
}

@media (min-width:1024px) {
  .c12 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c14 {
    font-size: 45px;
    line-height: 50px;
    margin-bottom: 5px;
  }
}

@media (min-width:768px) {
  .c21 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c20 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:768px) {
  .c22 {
    background-color: #DBDBDB;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    height: 15px;
    margin: 0 10px;
    width: 1px;
  }
}

@media (min-width:768px) {
  .c16 {
    font-size: 22px;
    line-height: 30px;
    margin-bottom: 25px;
  }
}

@media (min-width:1024px) {
  .c16 {
    margin-bottom: 20px;
  }
}

@media (min-width:1024px) {
  .c17 {
    width: 100%;
    margin-left: auto;
    margin-right: auto;
  }
}

@media (min-width:768px) {
  .c8 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c8 {
    min-height: 250px;
  }
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <svg>
            <path />
          </svg>
          <div
            className="c4"
          >
            Check your inbox
          </div>
        </div>
        <button
          className="c5"
        >
          <svg>
            <path />
          </svg>
        </button>
      </div>
      <div
        className="c6"
      >
        <div
          className="c7"
        >
          Verify your email by clicking on the link sent to your inbox.
        </div>
      </div>
    </div>
  </div>
  <div />
  <article>
    <Helmet>
      <title>
        Some Headline
      </title>
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <script>
        {"@context":"https://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://url.io"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=1200","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z","author":{"@type":"Person","name":"Some byline"},"articleSection":"Some Section","keywords":"Section:Some Section","articleId":"198c4b2f-ecec-4f34-be53-c89f83bc1b44","url":"https://url.io"}
      </script>
    </Helmet>
    <div
      className="c8"
    >
      <AdContainer
        marginBottom={0}
      />
    </div>
    <main
      className="c9"
    >
      <div
        className="c10"
      >
        <div
          backgroundColor="rgba(60, 129, 190, 1)"
          className="c11"
          order={2}
          width="100%"
        >
          <div
            className="c12"
          >
            <div
              className="c11"
              marginBottom="10px"
            >
              <div
                className="c13"
                color="rgba(255, 255, 255, 1)"
                fontFamily="Roboto-Regular, Roboto-Regular-fallback, sans-serif"
                fontSize={12}
                fontWeight="400"
                letterSpacing={0.5}
                lineHeight="12px"
                marginBottom={0}
                marginTop={-1}
                paddingTop={1}
              >
                SOME LABEL
              </div>
            </div>
            <h1
              className="c14"
            >
              Some Headline
            </h1>
            <div
              className="c15"
            >
              <ArticleFlags />
            </div>
            <h2
              className="c16"
            >
              Some Standfirst
            </h2>
          </div>
        </div>
        <ArticleLeadAsset
          className="c17"
          marginBottom="20px"
        />
        <div
          className="c18 c19"
        >
          <div
            className="c20"
            justifyContent="center"
            paddingBottom="10px"
            paddingTop="10px"
          >
            <div
              className="c21"
              flexDirection="row"
              flexWrap="wrap"
              justifyContent="center"
            >
              <ArticleBylineWithLinks />
            </div>
            <div
              className="c22"
            />
            <div
              className="c21"
              flexDirection="row"
              flexWrap="wrap"
              justifyContent="center"
            >
              <div
                className="c23"
              >
                <DatePublication />
              </div>
            </div>
          </div>
        </div>
        <div
          className="c18 c24 c25"
        >
          <div
            display="none"
          />
          <div>
            <div
              className="c26"
            >
              <div>
                <SaveAndShareBar />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        className="c27"
      >
        <div
          className="c28"
        >
          <div
            className="c29"
          >
            <div>
              <div>
                <div
                  className="c30"
                >
                  <ArticleImage />
                </div>
              </div>
            </div>
            <Link>
              Some Link
            </Link>
            <p
              className="c31"
            >
              Some content
            </p>
            <div
              className="c32"
            >
              <div
                className="c33"
              >
                <PullQuote>
                  The pull quote content
                </PullQuote>
              </div>
            </div>
            <div
              className="c30"
            >
              <figure
                margin={0}
              >
                <div
                  className="c11"
                  paddingBottom="56.25%"
                  position="relative"
                >
                  <div
                    className="c11"
                    height="100%"
                    position="absolute"
                    width="100%"
                  >
                    <div
                      className="lcpItem"
                      height="100%"
                      width="100%"
                    >
                      <div
                        height="100%"
                        position="relative"
                        width="100%"
                      >
                        <video
                          className="video-js"
                          height="100%"
                          width="100%"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <figcaption>
                  <div
                    className="c34"
                  >
                    <div
                      className="c11"
                    >
                      <div
                        className="c11"
                        paddingTop="10px"
                      >
                        <div
                          className="c13"
                          color="#696969"
                          fontFamily="Roboto-Regular, Roboto-Regular-fallback, sans-serif"
                          fontSize={14}
                          lineHeight="19px"
                          marginBottom={4}
                        >
                          This is video caption
                        </div>
                      </div>
                    </div>
                  </div>
                </figcaption>
              </figure>
            </div>
            <div
              className="c35"
            >
              <h2
                className="c36"
              >
                Advertisement
              </h2>
              <AdContainer />
            </div>
            <div>
              <div>
                <div
                  className="c37"
                >
                  <ArticleImage />
                </div>
              </div>
            </div>
            <div>
              <div>
                <div
                  className="c38"
                >
                  <ArticleImage />
                </div>
              </div>
            </div>
            <div />
          </div>
        </div>
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;

exports[`full article with style in the sunday times magazine 1`] = `
.c11 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c13 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font-size: 14px;
  font-family: sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 498px;
  padding: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  z-index: 100;
  border-top: 3px solid #005c8a;
  box-shadow: 0px 16px 24px 0px rgba(17,17,17,0.08);
  background: white;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.c6 {
  font-size: 14px;
}

.c4 {
  font-weight: 700;
  font-size: 18px;
  color: #333;
  font-family: Roboto-Regular;
}

.c7 {
  font-weight: 400;
  line-height: 24px;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  background: transparent;
  border: 0;
  cursor: pointer;
}

.c31 {
  color: #333333;
  display: block;
  font-family: TimesDigitalW04-Regular,TimesDigitalW04-Regular-fallback,serif;
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c31:first-of-type:after {
  content: "";
  clear: both;
  display: table;
}

.c34 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-left: 10px;
}

.c30 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c37 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c38 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c33 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-left: 10px;
  padding-right: 10px;
  margin-bottom: 10px;
}

.c32 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: block;
}

.c35 {
  clear: both;
  min-height: 283px;
  margin: 30px 0;
  box-sizing: content-box;
  padding: 0 0 10px;
  border-bottom: 1px solid rgb(219,219,219);
}

.c36 {
  border-bottom: 1px solid rgb(219,219,219);
  color: #696969;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular,TimesDigitalW04-Regular-fallback,serif;
  -webkit-letter-spacing: 0.6px;
  -moz-letter-spacing: 0.6px;
  -ms-letter-spacing: 0.6px;
  letter-spacing: 0.6px;
  margin: 0 0 10px;
  padding: 0 0 5px;
  text-align: center;
  text-transform: uppercase;
}

.c19 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c19 + .c18 {
  margin-top: -1px !important;
}

.c19:last-child {
  margin-bottom: 30px;
}

.c10 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 0;
}

.c10 > .c18 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c27 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c28 {
  position: relative;
}

.c0 {
  position: fixed;
  top: 20px;
  width: 100%;
  text-align: -webkit-center;
  z-index: 10;
}

.c26 {
  background-color: #FFFFFF;
  height: 60px;
}

.c26 [data-tc-sticky-sizer] {
  border-bottom: 1px solid transparent;
  will-change: border-bottom-color;
}

.c26.tc-sticky {
  will-change: height,box-shadow;
}

.c26[MOCK-PROGRESS-SELECTOR] {
  height: 59.5px;
  box-shadow: 0 2px 5px 0 #c9c7c7ed;
}

.c26[MOCK-PROGRESS-SELECTOR].tc-sticky [data-tc-sticky-sizer] {
  border-bottom-color: #ffffffdb;
}

.c25 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c25 + .c24 {
  margin-top: -1px !important;
}

.c25:last-child {
  margin-bottom: 30px;
}

.c25.contains-tc-sticky {
  border-bottom-color: transparent;
}

.c23 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font-size: 14px;
  font-family: sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  font-family: Roboto-Regular,Roboto-Regular-fallback,sans-serif;
  font-size: 14px;
  line-height: 17px;
  color: #696969;
  margin-top: 5px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 5px;
}

.c15 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-top: 5px;
  padding-bottom: 15px;
}

.c12 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-bottom: 45px;
  padding-left: 20px;
  padding-right: 20px;
  padding-top: 60px;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c14 {
  border: 0px solid black;
  box-sizing: border-box;
  display: inline;
  font-family: sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  font-weight: 400;
  font-family: TimesModern-Bold,TimesModern-Bold-fallback,serif;
  font-size: 30px;
  line-height: 33px;
  font-weight: 400;
  color: rgba(255,255,255,1);
  margin-bottom: 10px;
  text-align: center;
}

.c21 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  max-width: 100%;
}

.c20 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c22 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: none;
}

.c16 {
  border: 0px solid black;
  box-sizing: border-box;
  display: inline;
  font-family: sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  font-weight: 400;
  font-family: TimesModern-Regular,TimesModern-Regular-fallback,serif;
  font-size: 20px;
  line-height: 26px;
  font-weight: 400;
  color: rgba(255,255,255,1);
  margin-bottom: 15px;
  padding-left: 10px;
  padding-right: 10px;
  text-align: center;
}

.c17 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c8 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  box-sizing: content-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c31 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c31 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c34 {
    padding-left: 0px;
  }
}

@media (min-width:768px) {
  .c30 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c30 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c37 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c37 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c38 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c38 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c33 {
    width: 50%;
    float: left;
    margin-right: 20px;
    margin-bottom: 0px;
    margin-top: 5px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:768px) {
  .c32 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c32 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c35 {
    min-height: 123px;
  }
}

@media (min-width:970px) {
  .c35 {
    min-height: 283px;
  }
}

@media (min-width:768px) {
  .c19 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c19 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c19 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c9 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c29 {
    margin-top: 0;
    -webkit-transition: margin-top 0.2s ease;
    transition: margin-top 0.2s ease;
  }
}

@media (min-width:768px) {
  .c25 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c25 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c25 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c23 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c15 {
    padding-top: 0;
  }
}

@media (min-width:768px) {
  .c12 {
    width: 80.8%;
    margin-top: 0;
    margin-left: auto !important;
    margin-right: auto !important;
  }
}

@media (min-width:1024px) {
  .c12 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c14 {
    font-size: 45px;
    line-height: 50px;
    margin-bottom: 5px;
  }
}

@media (min-width:768px) {
  .c21 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c20 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:768px) {
  .c22 {
    background-color: #DBDBDB;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    height: 15px;
    margin: 0 10px;
    width: 1px;
  }
}

@media (min-width:768px) {
  .c16 {
    font-size: 22px;
    line-height: 30px;
    margin-bottom: 25px;
  }
}

@media (min-width:1024px) {
  .c16 {
    margin-bottom: 20px;
  }
}

@media (min-width:1024px) {
  .c17 {
    width: 100%;
    margin-left: auto;
    margin-right: auto;
  }
}

@media (min-width:768px) {
  .c8 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c8 {
    min-height: 250px;
  }
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <svg>
            <path />
          </svg>
          <div
            className="c4"
          >
            Check your inbox
          </div>
        </div>
        <button
          className="c5"
        >
          <svg>
            <path />
          </svg>
        </button>
      </div>
      <div
        className="c6"
      >
        <div
          className="c7"
        >
          Verify your email by clicking on the link sent to your inbox.
        </div>
      </div>
    </div>
  </div>
  <div />
  <article>
    <Helmet>
      <title>
        Some Headline
      </title>
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <script>
        {"@context":"https://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://url.io"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=1200","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z","author":{"@type":"Person","name":"Some byline"},"articleSection":"Some Section","keywords":"Section:Some Section","articleId":"198c4b2f-ecec-4f34-be53-c89f83bc1b44","url":"https://url.io"}
      </script>
    </Helmet>
    <div
      className="c8"
    >
      <AdContainer
        marginBottom={0}
      />
    </div>
    <main
      className="c9"
    >
      <div
        className="c10"
      >
        <div
          backgroundColor="rgba(60, 129, 190, 1)"
          className="c11"
          order={2}
          width="100%"
        >
          <div
            className="c12"
          >
            <div
              className="c11"
              marginBottom="10px"
            >
              <div
                className="c13"
                color="rgba(255, 255, 255, 1)"
                fontFamily="Roboto-Regular, Roboto-Regular-fallback, sans-serif"
                fontSize={12}
                fontWeight="400"
                letterSpacing={0.5}
                lineHeight="12px"
                marginBottom={0}
                marginTop={-1}
                paddingTop={1}
              >
                SOME LABEL
              </div>
            </div>
            <h1
              className="c14"
            >
              Some Headline
            </h1>
            <div
              className="c15"
            >
              <ArticleFlags />
            </div>
            <h2
              className="c16"
            >
              Some Standfirst
            </h2>
          </div>
        </div>
        <ArticleLeadAsset
          className="c17"
          marginBottom="20px"
        />
        <div
          className="c18 c19"
        >
          <div
            className="c20"
            justifyContent="center"
            paddingBottom="10px"
            paddingTop="10px"
          >
            <div
              className="c21"
              flexDirection="row"
              flexWrap="wrap"
              justifyContent="center"
            >
              <ArticleBylineWithLinks />
            </div>
            <div
              className="c22"
            />
            <div
              className="c21"
              flexDirection="row"
              flexWrap="wrap"
              justifyContent="center"
            >
              <div
                className="c23"
              >
                <DatePublication />
              </div>
            </div>
          </div>
        </div>
        <div
          className="c18 c24 c25"
        >
          <div
            display="none"
          />
          <div>
            <div
              className="c26"
            >
              <div>
                <SaveAndShareBar />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        className="c27"
      >
        <div
          className="c28"
        >
          <div
            className="c29"
          >
            <div>
              <div>
                <div
                  className="c30"
                >
                  <ArticleImage />
                </div>
              </div>
            </div>
            <Link>
              Some Link
            </Link>
            <p
              className="c31"
            >
              Some content
            </p>
            <div
              className="c32"
            >
              <div
                className="c33"
              >
                <PullQuote>
                  The pull quote content
                </PullQuote>
              </div>
            </div>
            <div
              className="c30"
            >
              <figure
                margin={0}
              >
                <div
                  className="c11"
                  paddingBottom="56.25%"
                  position="relative"
                >
                  <div
                    className="c11"
                    height="100%"
                    position="absolute"
                    width="100%"
                  >
                    <div
                      className="lcpItem"
                      height="100%"
                      width="100%"
                    >
                      <div
                        height="100%"
                        position="relative"
                        width="100%"
                      >
                        <video
                          className="video-js"
                          height="100%"
                          width="100%"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <figcaption>
                  <div
                    className="c34"
                  >
                    <div
                      className="c11"
                    >
                      <div
                        className="c11"
                        paddingTop="10px"
                      >
                        <div
                          className="c13"
                          color="#696969"
                          fontFamily="Roboto-Regular, Roboto-Regular-fallback, sans-serif"
                          fontSize={14}
                          lineHeight="19px"
                          marginBottom={4}
                        >
                          This is video caption
                        </div>
                      </div>
                    </div>
                  </div>
                </figcaption>
              </figure>
            </div>
            <div
              className="c35"
            >
              <h2
                className="c36"
              >
                Advertisement
              </h2>
              <AdContainer />
            </div>
            <div>
              <div>
                <div
                  className="c37"
                >
                  <ArticleImage />
                </div>
              </div>
            </div>
            <div>
              <div>
                <div
                  className="c38"
                >
                  <ArticleImage />
                </div>
              </div>
            </div>
            <div />
          </div>
        </div>
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;
